Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-34411

setUnifiedTitleAndToolBarOnMac not working

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: Not Evaluated Not Evaluated
    • 5.2.1
    • 5.2.0 Beta1
    • Widgets: Main Window
    • None
    • OSX 10.9
    • 7edb5f22bf78cf2691145ab4160998c7b7f9416a

      From commit https://qt.gitorious.org/qt/qtmacextras/commit/24d45304aa363c9a08f7157d549cb37c07212108
      I found now Qt5 use QMainWindow:: setUnifiedTitleAndToolBarOnMac() again for unified toolbar on mac, but in Qt 5.2beta1 this method doesn't work and in documentation it is still marked as not implemented and checking the codebase I found the source code of that method has not been touched for a long time.

      Is unified native toolbar still target for Qt 5.2?

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            sorvig Morten Sørvig
            yue Yue Liu
            Votes:
            13 Vote for this issue
            Watchers:
            19 Start watching this issue

              Created:
              Updated:
              Resolved: