src/plugins/platforms/cocoa/qcocoanativeinterface.mm
@@ -123,6 +123,8 @@ QPlatformNativeInterface::NativeResourceForIntegrationFunction QCocoaNativeInter
         return NativeResourceForIntegrationFunction(QCocoaNativeInterface::registerTouchWindow);
     if (resource.toLower() == "setembeddedinforeignview")
         return NativeResourceForIntegrationFunction(QCocoaNativeInterface::setEmbeddedInForeignView);
+    if (resource.toLower() == "setcontentborderthickness")
+        return NativeResourceForIntegrationFunction(QCocoaNativeInterface::setContentBorderThickness);
 
     return 0;
 }
@@ -271,6 +273,16 @@ void QCocoaNativeInterface::registerTouchWindow(QWindow *window,  bool enable)
     QCocoaWindow *cocoaWindow = static_cast<QCocoaWindow *>(window->handle());
     if (cocoaWindow)
         cocoaWindow->registerTouch(enable);
+}
+
+void QCocoaNativeInterface::setContentBorderThickness(QWindow *window, int topThickness, int bottomThickness)
+{
+    if (!window)
+        return;
+
+    QCocoaWindow *cocoaWindow = static_cast<QCocoaWindow *>(window->handle());
+    if (cocoaWindow)
+        cocoaWindow->setContentBorderThickness(topThickness, bottomThickness);
 }
 
 QT_END_NAMESPACE
